<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/ipAddress"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/ip_address"
        android:inputType="number"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/serverName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/server_name"
        android:inputType="text"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serverName" />
</androidx.constraintlayout.widget.ConstraintLayout>